[package]
name = "equivalent-flipped"
version = "1.0.0"
repository = "https://github.com/al8n/equivalent-flipped"
homepage = "https://github.com/al8n/equivalent-flipped"
documentation = "https://docs.rs/equivalent-flipped"
description = "Similar to `equivalent` crate, but flips `K` and `Q`."
license = "MIT OR Apache-2.0"
rust-version = "1.28"
keywords = ["hashmap", "no_std", "equivalent"]
categories = ["data-structures", "no-std"]

[dependencies]

[workspace.package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
